k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: orderflow

spec:
  replicas: 2

  selector:
    matchLabels:
      app: orderflow

  template:
    metadata:
      labels:
        app: orderflow

    spec:
      containers:
        - name: orderflow
          image: orderflow:1.3
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "1000m"
              memory: "512Mi"
