k8s/orderflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderflow
spec:
  replicas: 2

  selector:
    matchLabels:
      app: orderflow

  template:
    metadata:
      labels:
        app: orderflow

    spec:
      imagePullSecrets:
        - name: acr-secret

      containers:
        - name: orderflow
          image: orderflowrajesh2026.azurecr.io/orderflow:latest
          imagePullPolicy: Always

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "1000m"
              memory: "512Mi"
