k8s/orderflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderflow-service
spec:
  type: ClusterIP
  selector:
    app: orderflow
  ports:
    - port: 80
      targetPort: 8080
