k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: orderflow-service

spec:
  selector:
    app: orderflow

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
