k8s/orderflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orderflow-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: orderflow-service
                port:
                  number: 80

          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: orderflow-service
                port:
                  number: 80
